user-profile-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-profile
  template:
    metadata:
      labels:
        app: user-profile
    spec:
      containers:
      - name: user-profile
        image: registryois2716.azurecr.io/userprofile:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-profile
spec:
  selector:
    app: user-profile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
