ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trip-viewer-ingress
  namespace: front-end
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: trip-service
          servicePort: 80
        path: /api/trips(/|$)(.*)
      - backend:
          serviceName: poi-service
          servicePort: 80
        path: /api/poi(/|$)(.*)
      - backend:
          serviceName: user-profile
          servicePort: 80
        path: /api/userprofile(/|$)(.*)        
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /(.*)
